kubernetes/orders/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-tracking-route
  namespace: apis
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong-gw-demo
      namespace: kong
  rules:
    - backendRefs:
        - kind: Service
          name: order-tracking-frontend-svc
          namespace: apis
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
